fix contrast shaping padding index weather summary

--- a/final-project-test/scss/_large.scss
+++ b/final-project-test/scss/_large.scss
@@ -7,10 +7,11 @@ html {
     padding-right: 2rem;
 }
 .stats {
-    top: 1rem;
+    top: .5rem;
     left: 3rem;
     font-size: 1.7vw;
     line-height: 1.5rem;
+    padding: 1.9rem;
 }
 .pad-top {
     padding-top: 5rem;
