--- a/final-project-test/scss/_medium.scss
+++ b/final-project-test/scss/_medium.scss
@@ -37,7 +37,7 @@ p {
     padding-right: 2rem;
 }
 .stats {
-    top: 1rem;
+    top: .5rem;
     left: 2rem;
     font-size: 1.8vw;
 }
